// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-13">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-23 rsg--inheritSize-24 rsg--baseColor-28">
  Hello
  <em class="rsg--text-23 rsg--inheritSize-24 rsg--baseColor-28 rsg--em-30">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-15">
    <h1 class="rsg--heading-16 rsg--heading1-17">
      Header
    </h1>
  </div>
  <p class="rsg--para-13">
    Text with
    <em class="rsg--text-23 rsg--inheritSize-24 rsg--baseColor-28 rsg--em-30">
      some
    </em>
    <strong class="rsg--text-23 rsg--inheritSize-24 rsg--baseColor-28 rsg--strong-31">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-14"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-13">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render a blockquote 1`] = `

<blockquote class="rsg--blockquote-36">
  <p class="rsg--para-13">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<ul class="rsg--list-33">
  <li class="rsg--li-35">
    <input type="checkbox"
           class="rsg--input-2"
           readonly
    >
    list 1
  </li>
  <li class="rsg--li-35">
    <input type="checkbox"
           class="rsg--input-2"
           readonly
    >
    list 2
  </li>
  <li class="rsg--li-35">
    <input type="checkbox"
           class="rsg--input-2"
           checked
           readonly
    >
    list 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-5 rsg--para-1">
  <code class="lang-html rsg--code-4">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-15">
    <h1 class="rsg--heading-16 rsg--heading1-17">
      one
    </h1>
  </div>
  <div class="rsg--spacing-15">
    <h2 class="rsg--heading-16 rsg--heading2-18">
      two
    </h2>
  </div>
  <div class="rsg--spacing-15">
    <h3 class="rsg--heading-16 rsg--heading3-19">
      three
    </h3>
  </div>
  <div class="rsg--spacing-15">
    <h4 class="rsg--heading-16 rsg--heading4-20">
      four
    </h4>
  </div>
  <div class="rsg--spacing-15">
    <h5 class="rsg--heading-16 rsg--heading5-21">
      five
    </h5>
  </div>
  <div class="rsg--spacing-15">
    <h6 class="rsg--heading-16 rsg--heading6-22">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-13">
  Foo
  <code class="rsg--code-4">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-13">
  a
  <a href="http://test.com"
     class="rsg--link-14"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<ul class="rsg--list-33">
  <li class="rsg--li-35">
    list 1
  </li>
  <li class="rsg--li-35">
    list 2
    <ol class="rsg--list-33 rsg--ordered-34">
      <li class="rsg--li-35">
        Sub-list
      </li>
      <li class="rsg--li-35">
        Sub-list
      </li>
      <li class="rsg--li-35">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-35">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<ol class="rsg--list-33 rsg--ordered-34">
  <li class="rsg--li-35">
    list
  </li>
  <li class="rsg--li-35">
    item
  </li>
  <li class="rsg--li-35">
    three
  </li>
</ol>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<ul class="rsg--list-33">
  <li class="rsg--li-35">
    list
  </li>
  <li class="rsg--li-35">
    item
  </li>
  <li class="rsg--li-35">
    three
  </li>
</ul>

`;
